<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/white"
    tools:context=".MainActivity" >

    <ImageView
        android:id="@+id/imageViewIntro"
        android:layout_width="220dp"
        android:layout_height="220dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/presentation_image"
        app:srcCompat="@mipmap/lightbulb" />

    <TextView
        android:id="@+id/textViewIntro"
        android:layout_width="308dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:background="@drawable/textview_border"
        android:maxWidth="320dp"
        android:padding="16dp"
        android:text="@string/text_presentation"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <Button
        android:id="@+id/buttonStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/golden_yellow"
        android:textColor="@color/black"
        android:text="@string/start_btn" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_marginTop="16dp">

        <TextView
            android:id="@+id/textViewLastScore"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textAlignment="center"
            android:layout_marginBottom="16dp"
            android:textSize="16sp"
            android:text="@string/last_attempts"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/scoreNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textAlignment="center"
            android:textSize="16sp"
            android:text="@string/score_number"
            android:textColor="@color/black" />

    </LinearLayout>

</LinearLayout>
