<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".BeginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageViewHigh"
                android:layout_width="@dimen/image_arrow_size"
                android:layout_height="@dimen/image_arrow_size"
                android:importantForAccessibility="no"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/textViewHighLabel"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/baseline_arrow_upward_24" />

            <TextView
                android:id="@+id/textViewHighLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/high"
                app:layout_constraintBottom_toBottomOf="@+id/imageViewHigh"
                app:layout_constraintEnd_toStartOf="@+id/imageViewLow"
                app:layout_constraintStart_toEndOf="@+id/imageViewHigh"
                app:layout_constraintTop_toTopOf="@+id/imageViewHigh" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageViewLow"
                android:layout_width="@dimen/image_arrow_size"
                android:layout_height="@dimen/image_arrow_size"
                android:importantForAccessibility="no"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/textViewLowLabel"
                app:layout_constraintStart_toEndOf="@+id/textViewHighLabel"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/baseline_arrow_downward_24" />

            <TextView
                android:id="@+id/textViewLowLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/low"
                app:layout_constraintBottom_toBottomOf="@+id/imageViewLow"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageViewLow"
                app:layout_constraintTop_toTopOf="@+id/imageViewLow" />
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/textViewHint"
        android:layout_width="308dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/textview_border"
        android:gravity="center_horizontal"
        android:maxWidth="320dp"
        android:padding="16dp"
        android:text="@string/text_hint"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/editTextNumber"
        android:layout_width="308dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="number"
        android:minHeight="48dp"
        tools:ignore="LabelFor,SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/buttonConfirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/golden_yellow"
        android:text="@string/confirm"
        android:textColor="@color/black" />


</LinearLayout>